# leetr

./: Cargo.toml  README.md  valid_input_types.csv
.github/workflows/: rust.yml
src/: argument_parser.rs  client.rs  code_parser.rs  config.rs  errors.rs  example_parser.rs  html.rs  leetcode_client.rs  logger.rs  main.rs  project_generator.rs  project_templates.rs  queries.rs  response_types.rs
src/graphql/: console_panel_config.graphql  problemset_questionlist_query.graphql  question_content.graphql  question_editor_data.graphql
src/project_generator/: example_types.rs  metadata.rs  mod.rs  rust_generator.rs  traits.rs
src/project_generator/code_snippets/: rust_test.rs  rust_test_mod.rs
src/test_generator/: mod.rs  rust_generator.rs  traits.rs
