[package]
name = "leetr"
version = "0.1.1"
edition = "2021"
authors = ["Popov Philipp <philolippo@gmail.com>"]
description = "A CLI tool for setting up local LeetCode projects"
repository = "https://github.com/pophilpo/leetr"
license = "GPL-3.0"

[[bin]]
name = "leetr"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.3"
reqwest = { version = "0.12.3" , features = ["json"]}
tl = "0.7.8"
tokio = { version = "1.37.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
html2md = "0.2.14"
clap = { version = "4.5.4", features = ["cargo"] }
toml = "0.8.12"
thiserror = "1.0.60"
log = "0.4.21"
colored = "2.1.0"
