[package]
name = "leetr"
version = "0.1.3"
edition = "2021"
authors = ["Popov Philipp <philolippo@gmail.com>"]
description = "A CLI tool for setting up local LeetCode projects"
repository = "https://github.com/pophilpo/leetr"
license = "GPL-3.0"

[[bin]]
name = "leetr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
colored = "2.1.0"
env_logger = "0.11.3"
html2md = "0.2.14"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.60"
tl = "0.7.8"
toml = "0.8.12"
