[package]
name = "leetr"
version = "0.1.3"
edition = "2021"
authors = ["Popov Philipp <philolippo@gmail.com>"]
description = "A CLI tool for setting up local LeetCode projects"
repository = "https://github.com/pophilpo/leetr"
license = "GPL-3.0"

[[bin]]
name = "leetr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
syn = { version = "2.0", features = ["full", "extra-traits"] }
regex = "1.10.6"
quote = "1.0.37"
fern = { version = "0.6", features = ["colored"] }
colored = "2.0"
chrono = "0.4"
